# ankilangs

./: .gitignore  404.html  CONTRIBUTING.md  Justfile  Pipfile  README.md  config.toml  decks.yaml  en.search-data.min.00ccb13f9236446410586f09a05c1a9b5c5b8a90befa78eb1853e30c3d21900f.json  en.search-data.min.073708e14098d6d9b15015f3ab8a1c6f585429ab394cbaf0cdc1c12233b5a03d.json  en.search-data.min.07da03441a1d1b25a9165516298368dad6bfbe0755fe76422a0485a12959da09.json  en.search-data.min.1bba204957683a00d24841d8fde9bc4b2779b5139a2130edf7983a9424c5dacb.json  en.search-data.min.1c7b4d85a873dc9864ba4f09bdcef480591042b1abd98383a67991740f765c88.json  en.search-data.min.22a403061fc11377b2414ff3e89876a1656cbde4475f5bd30a5ae0d5eba087cb.json  en.search-data.min.28d6db3f9feeb8f06ff05da78744c5756c79adfe62bbf345376ee5fe4c12b0e1.json  en.search-data.min.3654d21525720b14490fcd254e0e87ca8875c2a6a3faf407607be6aea7d76cc6.json  en.search-data.min.3b53b9483a3c060caf2958e7c55e1ec9d7335f5ea91190d68a46f2ea64626926.json  en.search-data.min.3c4473635f9e535aaf15b2ec5ac70f29da322c2b3667afe2cc7c761446de2e04.json  en.search-data.min.3ce1b502e69f812d2f9cf4e8c8563105fac30737269faca9c062352ec91bb0e7.json  en.search-data.min.411e5b4baa7c1f9316086d0e07d200b78be3eb1a50969a161ee29ac75bde97ad.json  en.search-data.min.43415b17caf463eb070eee57f6cf6c0969f8c820487a0de6705da786e2431831.json  en.search-data.min.46471cb04365cc6e6479a36e09262053d37863a2850a791179ce6ca496b1c36d.json  en.search-data.min.561db29fb68530236823730c5eeb705b9d553f8d8ec933d93eab9becc49da8db.json  en.search-data.min.688f820a74766894f63c91f503ec8d8f621b00b27bcc9caecf25f92534b197ca.json  en.search-data.min.80eaed83e9e65d708bca334c4305cae4a736a4af865b3c7bcc7c8192dc7bf837.json  en.search-data.min.9a6cf52b3c34b44076527234dc646d49c873db8ebf2b6318a048d24f0493fcd4.json  en.search-data.min.9f20c06ce775fb9089bee600ef58137e35a27bfb82e3243b7e09f3b1f3f97d29.json  (+62 more)
static/: CNAME
(+601 files in other folders)
