[tool.poetry]
name = "al-tools"
version = "0.1.0"
description = "Tooling for AnkiLangs.org"
authors = ["Omar Kohl <omarkohl@posteo.net>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
brain-brew = "^0.3.11"
pandas = "^2.3.0"
google-cloud-texttospeech = "^2.27.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.8"
pytest = "^8.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
al-tools = "al_tools.cli:cli"
